fixed wrapping

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ p {
   text-shadow:0 0 2vw #00c510;
 	font-family: 'LCD';
 	letter-spacing: 2px;
+	white-space: nowrap;
 }
 button {
 	border-radius:5px;
@@ -31,4 +32,9 @@ button {
 	font-size: 1em;
 	padding:5px 10px;
 	margin-bottom:5px;
+}
+@media only screen (min-width: 500px) {
+	br {
+		display:none;
+	}
 }
